# Linux-Experiment-Course

./: .gitignore  README.md
VMware-demo/: README.md
final-project/: CMakeLists.txt  README.md
final-project/Client/: README.md  client.cpp  client.h
final-project/HostA/: README.md
final-project/HostA/ServerA/: serializable.h  server.cpp
final-project/HostB/: README.md
final-project/Monitor/: README.md  monitor.cpp
final-project/Server/: README.md  common.h  serializable.h  server.cpp  server.h
final-project/Store/: README.md  store.cpp
gdb-demo/: Makefile  README.md  main.cpp  process.cpp  process.h  test
gdb-demo-2/: Makefile  README.md  gdb_test.cpp  test  test.cpp
googletest-demo/: CMakeLists.txt  README.md
googletest-demo/MyProject/: my_math.cpp  my_math.h
googletest-demo/test/: gtest_main.cpp  unittest.cpp
makefile-demo/: Makefile  README.md  main.cpp  makefile  my_print.cpp  print.cpp  print.h  test.cpp
plugin-demo/: README.md
plugin-demo/v1/: Makefile  a.cpp  a.h  test.cpp
plugin-demo/v2/: CPluginEnumerator.cpp  Makefile  test.cpp
plugin-demo/v3/: CPluginController.cpp  CPluginController.h  Makefile  test.cpp
plugin-demo/v4/: CPluginController.cpp  CPluginController.h  CPluginEnumerator.h  Makefile  function.cpp  function1.cpp
plugin-demo/v5/: CPluginController.cpp  CPluginController.h  IPrintPlugin.h  Makefile  function.cpp  function1.cpp  test.cpp
serialize-demo/: Makefile  README.md  serializable.h  test.cpp
serialize-demo/v1/: serializable.h  serializer.h  test.cpp
serialize-demo/v2/: Makefile  serializer.h  test.cpp
serialize-string-or-char-demo/: Makefile  README.md  serializable.h  test.cpp
singleton-lock-demo/: Makefile  README.md  hungry.h  lazy.h  main.cpp
socket-demo/: README.md
test/: README.md  serializable.h  test.cpp
valgrind-demo/: Makefile  README.md  my_leak.cpp
(+17 files in other folders)
